Refactor: Implementation of fluid typography and UI optimizations for Charity section

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -1,2 +1,15 @@
-[project]
-project_id = ""
+project_id = "dbkwkdqxqhqmhkjzqxfd"
+
+[api]
+enabled = true
+port = 54321
+schemas = ["public", "graphql_public"]
+
+[db]
+port = 54322
+shadow_port = 54320
+major_version = 15
+
+[studio]
+enabled = true
+port = 54323
